deploy/main/default/objects/MDChild__c/MDChild__c.object-meta.xml
<CustomObject>
    <label>MD Child</label>
    <nameField>
        <label>MD Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD Children</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>