deploy/main/default/objects/MDChild__c/fields/HTML__c.field-meta.xml
<CustomField>
    <fullName>HTML__c</fullName>
    <label>HTML</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>