deploy/main/default/objects/MDChild__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <referenceTo>MDParent__c</referenceTo>
    <relationshipName>Children</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>